syntax = "proto3";

package pb;

option go_package = "github.com/mariuskimmina/supplywatch;pb";

service ProductService {
    rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse) { }
    rpc ReceivProducts(ReceivProductsRequest) returns (ReceivProductsResponse) { }
}

message Product {
    string id = 1;
    string name = 2;
}

message GetAllProductsResponse {
    repeated Product products = 1;
}

message GetAllProductsRequest { }

message ReceivProductsRequest {
    Product product = 1;
    int32 amount = 2;
}

message ReceivProductsResponse {
    bool success = 1;
}
